# ZiaMart

./: README.md  compose.yaml
Inventory/: Dockerfile.dev  pyproject.toml
Inventory/Inventory/: auth.py  db.py  inventory.proto  inventory_pb2.py  kafka.py  main.py  modules.py  settings.py
Notifications/: Dockerfile.dev  pyproject.toml
Notifications/Notifications/: db.py  functions.py  kafka.py  main.py  modules.py  notification.proto  notification_pb2.py  settings.py
Orders/: Dockerfile.dev  pyproject.toml
Orders/Orders/: auth.py  db.py  functions.py  kafka.py  main.py  modules.py  order.proto  order_pb2.py  settings.py
Products/: Dockerfile.dev  pyproject.toml
Products/Products/: auth.py  db.py  functions.py  kafka.py  main.py  modules.py  product.proto  product_pb2.py
Users/: Dockerfile.dev
Users/Users/: authentication.py  db.py  functions.py  kafka.py  main.py  modules.py  settings.py  user.proto  user_pb2.py
